# et-micc

./: .flake8  .gitignore  API.rst  APPS.rst  AUTHORS.rst  CHANGELOG.rst  DEVENV.rst  FAQ.rst  HISTORY.rst  ISSUES.rst  LICENSE  LINKS.rst  Makefile  README.rst  TODO.rst  TUTORIAL-1.rst  micc.json  micc_custom_build.py  pyproject.toml  requirements.txt  symlink-micc.sh
docs/: Makefile  api.rst  apps.rst  changelog.rst  conf.py  devenv.rst  faq.rst  index.rst  installation.rst  links.rst  readme.rst  requirements.txt  tutorials.rst  usage.rst
et_micc/: __init__.py  cli.py  cli_micc.py  cli_orig.py  commands.py  commands_orig.py  db.py  expand.py  f2py.py  logger.py  logging.py  logging_.py  logging_tools.py  micc.json  project.py  static_vars.py  stopwatch.py  tomlfile.py  utils.py
et_micc/cmake_tools/: F2pyAddModule.cmake  FindF2PY.cmake  pybind11Config.cmake  pybind11ConfigVersion.cmake  pybind11Targets.cmake
et_micc/templates/module-cpp/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/cpp_{{cookiecutter.module_name}}/: CMakeLists.txt  {{cookiecutter.module_name}}.rst
et_micc/templates/module-f90/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/f90_{{cookiecutter.module_name}}/: CMakeLists.txt
et_micc/templates/package-base/{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
et_micc/templates/package-general-docs/{{cookiecutter.project_name}}/: AUTHORS.rst  HISTORY.rst
et_micc/templates/package-simple/{{cookiecutter.project_name}}/: .bumpversion.cfg
micc/: __init__.py  cli.py  commands.py  exceptions.py  expand.py  generate_cli_rst.py  logging.py  logging_tools.py  micc  micc.json  micc.py  static_vars.py  stopwatch.py  tomlfile.py  utils.py
micc-module/: README.rst
micc-module/{{cookiecutter.project_name}}/: API.rst  Makefile
micc-module/{{cookiecutter.project_name}}/docs/: conf.py  index.rst
micc-module/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
micc/cmake_tools/: F2pyAddModule.cmake
micc/micc-app/: micc.json
micc/micc-app/{{cookiecutter.project_name}}/tests/: test_cli_{{cookiecutter.app_name}}.py
micc/micc-app/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli_{{cookiecutter.app_name}}.py
micc/micc-module/: micc.json
micc/micc-module-cpp/{{cookiecutter.project_name}}/tests/: test_cpp_{{cookiecutter.module_name}}.py
micc/micc-module-f2py/: micc.json
micc/micc-module-f2py/{{cookiecutter.project_name}}/tests/: test_f2py_{{cookiecutter.module_name}}.py  test_{{cookiecutter.f2py_module_name}}{{cookiecutter.suffix}}.py  test_{{cookiecutter.module_name}}{{cookiecutter.f2py_suffix}}.py
micc/micc-module-f2py/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.build_prefix}}{{cookiecutter.module_name}}{{cookiecutter.f2py_suffix}}.sh  {{cookiecutter.f2py_module_name}}{{cookiecutter.suffix}}.f90  {{cookiecutter.module_name}}{{cookiecutter.f2py_suffix}}.f90  {{cookiecutter.module_name}}{{cookiecutter.f2py_suffix}}.rst
micc/micc-module-f2py/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/f2py_{{cookiecutter.module_name}}/: CMakeLists.txt  {{cookiecutter.module_name}}.f90  {{cookiecutter.module_name}}.rst
micc/micc-module/{{cookiecutter.project_name}}/: .gitignore  API.rst  HISTORY.rst  Makefile
micc/micc-module/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
micc/micc-module/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  {{cookiecutter.module_name}}.py
micc/micc-package-simple/{{cookiecutter.project_name}}/: Makefile  pyproject.toml
micc/micc-package/{{cookiecutter.project_name}}/: Makefile  README.rst  pyproject.toml
micc/micc-package/{{cookiecutter.project_name}}/docs/: index.rst
micc/micc-package/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
micc/micc-package/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.package_name}}.py
micc/template-app/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.cli_app_name}}.py
micc/template-module-f2py/: micc.json
micc/template-package(obsolete)/{{cookiecutter.project_name}}/: .flake8  AUTHORS.rst
micc/template-package(obsolete)/{{cookiecutter.project_name}}/docs/: installation.rst
micc/template-package-base/{{cookiecutter.project_name}}/: .gitignore
micc/template-package-general-docs/hooks/: pre_gen_project.py
micc/template-package-general-docs/{{cookiecutter.project_name}}/docs/: index.rst
micc/template-package-simple(obsolete)/: micc.json
micc/template-package-simple(obsolete)/{{cookiecutter.project_name}}/: {{cookiecutter.package_name}}.py
micc/template-package-simple(obsolete)/{{cookiecutter.project_name}}/docs/: conf.py  index.rst
micc/template-package-simple-docs/{{cookiecutter.project_name}}/: .gitignore
micc/template-package-simple/{{cookiecutter.project_name}}/: {{cookiecutter.package_name}}.py
micc/template-package/{{cookiecutter.project_name}}/tests/: __init__.py
micc/templates/module-f2py/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/f2py_{{cookiecutter.module_name}}/: CMakeLists.txt  {{cookiecutter.module_name}}.rst
tests/: __init__.py  helpers.py  test_cli_micc.py  test_logger.py  test_logging.py  test_logging_tools.py  test_micc.py  test_project.py  test_tomlfile.py  test_utils.py
tutorials/: TUTORIAL-1.rst  TUTORIAL-2.rst  TUTORIAL-3.rst  TUTORIAL-4.rst  TUTORIAL-5.rst  TUTORIAL-6.rst  TUTORIAL-7.rst  TUTORIAL-7b.rst  TUTORIAL-conda.rst  TUTORIAL-windows.rst  TUTORIALS.rst  cluster.rst
tutorials/tutorial-1/: TUTORIAL-1-0.rst  TUTORIAL-1-1.rst  TUTORIAL-1-2.rst  TUTORIAL-1-3.rst  TUTORIAL-1.rst
tutorials/tutorial-2/: TUTORIAL-2-1.rst  TUTORIAL-2-2.rst  TUTORIAL-2-3.rst  TUTORIAL-2-4.rst  TUTORIAL-2-5.rst  TUTORIAL-2.rst
tutorials/tutorial-3/: TUTORIAL-3.rst
tutorials/tutorial-4/: TUTORIAL-4.rst
tutorials/tutorial-5/: TUTORIAL-5.rst
tutorials/tutorial-6/: TUTORIAL-6.rst
tutorials/tutorial-7/: TUTORIAL-7.rst
(+37 files in other folders)
