[tool.poetry]
name = "micc"
version = "0.6.6"
description = "A practical Python project skeleton generator."
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/micc"
homepage = "https://github.com/etijskens/micc"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
cookiecutter = "^1.6.0"
sphinx = "^2.2.0"
sphinx-click = "^2.3.0"
sphinx-rtd-theme = "^0.4.3"
pytest = "^4.4.2"
tomlkit =  "^0.5.5"
pybind11 = "^2.2.4"
numpy = "^1.17.0"
bump2version="^0.5.11"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]
micc = 'micc:cli.main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
