[tool.poetry]
name = "et-micc"
version = "1.0.14"
description = "A practical Python project skeleton generator."
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/et-micc"
homepage = "https://github.com/etijskens/et-micc"

keywords = ['project management']

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
cookiecutter = "^1.6.0"
sphinx-click = "^2.3.0"
sphinx-rtd-theme = "^0.4.3"
walkdir="^0.4.1"
tomlkit = "^0.5.8"
semantic_version = "^2.8.3"
pypi-simple = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]
micc = 'et_micc:cli_micc.main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
