[tool.poetry]
name = "et-micc"
version = "2.0.0"
description = "A practical Python project skeleton generator."
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/et-micc"
homepage = "https://github.com/etijskens/et-micc"

keywords = ['project management']

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
cookiecutter = "^1.6.0"
walkdir="^0.4.1"
tomlkit = "^0.7.0"
semantic_version = "^2.8.3"
pypi-simple = "^0.8.0"
numpy = "^1.17.0"
pybind11 = "^2.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
micc = 'et_micc:cli_micc.main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
